src/chrome/komodo/skin/global/normalize.less
/* ... */
treecol,
treecolpicker
{
    color: @caption;
    
    label
    {
        padding: 0.5rem 4px;
        font-weight: bold;
    }
}

treecolpicker
{
    > image
    {
        list-style-image: none !important;
    }
    .columns-icon();
}

::-moz-tree-row {
    min-height: 1.6rem;
}

treechildren::-moz-tree-cell {
    margin-left: 4px;
}

treechildren:not(.autocomplete-treebody)::-moz-tree-row
{
    -moz-border-top-colors: transparent;
    -moz-border-right-colors: transparent;
    -moz-border-left-colors: transparent;
    -moz-border-bottom-colors: transparent;
    outline: 0 !important;
}

treechildren::-moz-tree-cell-text(container)
{
    color: darken(@foreground, 30%) !important;
}

treechildren::-moz-tree-row(warning)
{
    background: @state-warning;
    color: @state-foreground;
}

treechildren::-moz-tree-row(selected)
{
    color: @selected-foreground;
    background: @selected;
}

treechildren::-moz-tree-cell-text
{
    padding-left: 2px;
}

treechildren::-moz-tree-cell-text(selected)
{
    color: @selected-foreground !important;
}

treechildren::-moz-tree-twisty {
    -moz-appearance: none;
    width: 14px;
    height: 14px;
    margin-right: -5px;
    margin-top: 3px;
}

tree.twisty-only treechildren::-moz-tree-image
{
    margin-left: -14px;
}

richlistitem, listitem, row /* :any is too flaky */
{
    &[selected="true"]
    {
        color: @selected-foreground;
        background: @selected;
        
        description, label
        {
            color: @selected-foreground;
        }
    }
}

/* Splitters */

splitter
{
    background-image: none;
}

splitter:not(.workspace_splitter)
{
    background-color: @contrast;
}

splitter[orient="horizontal"]
{
    min-width: 1px;
}

splitter[orient="vertical"]
{
    min-height: 1px;
}

splitter#row-splitter,
splitter.row-splitter
{
    background-image: none;
    background-color: transparent;
    border-bottom: 1px dashed @contrast;
    margin: 5px 0 10px;
    height: 5px;
    min-height: 0;
}

splitter#column-splitter,
splitter.column-splitter
{
    background-image: none;
    background-color: transparent;
    border-right: 1px dashed @contrast;
    width: 5px;
    margin: 0 10px 0 5px;
    min-width: 0;
}

separator
{
    height: 1rem;
    
    &.slim
    {
        height: 0.5rem;
    }
}

.menu-accel-container
{
    opacity: 0.6;
    font-family: monospace;
    margin-left: 2rem;
    
    &, label
    {
        max-width: 200px;
        overflow: auto;
    }
}

menu, menuitem
{
    min-height: 1.6rem; /* Consistent with trees, listboxes, etc */
    -moz-box-align: center;
    
    padding: 0 6px;
}

menuseparator
{
    height: 1px;
}

.menu-iconic-left
{
    visibility: collapse;
}

.menu-iconic-left
{
    margin-right: 4px;
}


/* Buttons */

button.unstyled
{
    -moz-appearance: none;
}

:not(button) > button:not(.button-toolbar-a):not(.unstyled):not(.spinbuttons-button),
.button
{
    -moz-appearance: none;
    margin: 4px;
    padding: 0.3rem 1.5rem;
    border-radius: 1px;
    background: @button;
    color: @button-foreground;
    
    label.button-text
    {
        color: @button-foreground;
    }
    
    &:hover
    {
        background: @secondary-special;
        color: @foreground-special;
        
        label.button-text
        {
            color: @foreground-special;
        }
    }
}

spinbuttons
{
    margin-top: -3px;
    margin-left: 4px;
    
    button
    {
        height: 10px;
    }
}

button[type="checkbox"][checked="true"]
{
    box-shadow: inset 0px 0px 0px 1px @secondary-special;
}

/* Groupboxes */

.groupbox-body
{
    background: @contrast;
    padding: 10px;
}

/* Modals */

.dialog:root,
dialog:root,
.pref-window
{
    &:not(.embedded)
    {
        background: @contrast;
    }
    
    color: @foreground;
    
    .dialog-button-box
    {
        -moz-box-pack: center;
        -moz-box-align: center;
        
        spacer
        {
            visibility: collapse;
        }
    }

    tabbox tabpanels,
    .groupbox-body
    {
        background: @background;
        color: @foreground;
        padding: 10px;
        
        /* Todo: Properly implement using defined colors */
        .groupbox-body
        {
            background: lighten(@background, 5%);
        }
        
        view
        {
            border: 1px solid @border;
        }
    }
    
    menupopup
    {
        & > menu,
        & > menuitem
        {
            background: @background;
        }
    
        .popup-internal-box
        {
            border: 1px solid @contrast;
            background: @background;
        }
        
        menuseparator
        {
            background: @contrast;
        }
    }
    
    splitter.row-splitter
    {
        border-bottom: 1px dashed @background;
    }
    
    splitter.column-splitter
    {
        border-right: 1px dashed @background;
    }
    
}

/* Widgets */

.widgetToolbarWrap
{
    min-height: 29px;
    background: @contrast;
    -moz-box-pack: center;
    -moz-box-align: center;
    
    padding: 0 4px;
    
    textbox, toolbarbutton, menulist
    {
        margin-top: 0 !important;
        margin-bottom: 0 !important;
    }
}

.status-toolbar
{
    height: 27px;
    background: @contrast;
    padding: 2px;
    
    textbox
    {
        margin: 0;
    }
}

page.widget listitem,
page.widget richlistitem
{
    padding-left: 4px;
    padding-right: 4px;
}
/* ... */

